Fixed overflow issue.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,4 @@
 .app {
   background-image: linear-gradient(-45deg, #8706CD 0%, #DF7F79 100%);
+  padding-bottom: 69px;
 }
